# backtrack

./: .gitignore  CLAUDE.md  COMPETITIVE_RESEARCH.md  Cargo.toml  PARSER_IMPROVEMENTS.md  PRODUCT_PLAN.md  QA_STRATEGY.md  README.md  TODO.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/src/: lib.rs
desktop/: RUN.md  index.html  package-lock.json  package.json  tailwind.config.js
desktop/src/: App.tsx  index.css  main.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backtrack_init.rs  commands.rs  db.rs  file_watcher.rs  main.rs  state.rs  tray.rs  utils.rs
desktop/src/components/: DebugPanel.tsx  Onboarding.tsx  RecentChanges.tsx  SettingsModal.tsx  SettingsPanel.tsx  WatchedFolders.tsx
desktop/src/components/auth/: AuthScreen.tsx
desktop/src/components/layout/: ChangeTreeGraph.tsx  MainContent.tsx  Sidebar.tsx  Timeline.tsx  (+1 more)
desktop/src/hooks/: useTauri.ts
desktop/src/store/: appStore.ts
docs/architecture/: ARCHITECTURE.md
docs/planning/: PRODUCT_REQUIREMENTS.md  STATUS_BUILD.md  TASK_BREAKDOWN.md
docs/qa/: QA_STRATEGY.md  SNAPSHOT_STORAGE_RESTORE_TEST_PLAN.md
docs/research/: ALS_PARSING.md  UI_TECH_STACK.md
parser-lib/: Cargo.toml  README.md
parser-lib/examples/: basic_usage.rs  diff_projects.rs
parser-lib/src/: decompressor.rs  error.rs  lib.rs  types.rs  xml_parser.rs
parser-lib/src/diff/: device_diff.rs  formatter.rs  mod.rs  track_diff.rs  types.rs
parser-lib/tests/: generate_fixtures.rs  integration_test.rs
parser-lib/tests/fixtures/: simple.als
src/: cli.ts  index.ts  integrity.ts  snapshot.ts  storage.ts  types.ts
test/: snapshot.test.ts  storage.test.ts
(+1 files in other folders)
