[package]
name = "backtrack-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared Ableton .als parser for Backtrack desktop and backend."
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "parse-als"
path = "src/bin/parse-als.rs"

[dependencies]
flate2.workspace = true
quick-xml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
flate2 = { workspace = true }
quick-xml = { workspace = true }
serde_json = { workspace = true }
